--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress",
     "build:clean": "npm run test:clean && rimraf ./dist/*",
     "build:dll": "node ./internals/scripts/dependencies.js",
-    "start": "cross-env NODE_ENV=development SHOW_VERSION=false node server",
+    "start": "npm run backend & cross-env NODE_ENV=development SHOW_VERSION=false node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -42,7 +42,8 @@
     "test:clean": "rimraf ./coverage",
     "test:watch": "npm run test -- --watch",
     "test:junit": "JEST_JUNIT_OUTPUT=./junit/junitOutput.xml npm test -- --ci --testResultsProcessor='jest-junit'",
-    "test:coverage": "npm run test -- --coverage "
+    "test:coverage": "npm run test -- --coverage ",
+    "backend": "cd backend/graphql-pokemon && yarn start"
   },
   "dllPlugin": {
     "path": "node_modules/react-boilerplate-dlls",
@@ -62,6 +63,11 @@
     ]
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.11",
+    "apollo-client": "^2.2.7",
+    "apollo-link-batch": "^1.1.2",
+    "apollo-link-batch-http": "^1.2.1",
+    "apollo-link-http": "^1.5.3",
     "axios": "^0.17.0",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.3.1",
@@ -70,6 +76,8 @@
     "es5-shim": "^4.5.9",
     "express": "4.16.2",
     "fontfaceobserver": "2.0.13",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
     "http-status-codes": "^1.3.0",
     "immutable": "3.8.2",
